# release...

./: .gitignore  docker-compose.yml  hi.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-updater.yml  ci.yml  errrors.txt  release.yml
scripts/: release.sh
src/: App.tsx  OverlayApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/src/: auth.rs  main.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/overlay/: mod.rs  native_overlay.rs  overlay_manager.rs  screen_capture.rs  screenshot_cache.rs
src/common/: utils.ts
src/components/: .gitlab-ci.yaml  ChatBox.tsx  DragOverlay.tsx  LoginDialog.tsx  ModelSelector.tsx  ProfileDropdown.tsx  ResultOverlay.tsx  SettingsDialog.tsx  ThinkingAnimation.tsx  UserMenu.tsx  WindowAnimation.tsx
src/config/: api-config.ts
src/hooks/: useUIState.ts
src/services/: auth-service-db.ts  openai-service-api.ts  openai-service.ts  prompt-optimizer.ts  user-service.ts
src/stores/: app-store.ts
src/tauri/: TauriProvider.tsx  storage.ts
src/types/: ai-types.ts
src/utils/: image-optimizer.ts
